fixing the font size for mobile display & overflow

--- a/src/pages/generator/index.module.scss
+++ b/src/pages/generator/index.module.scss
@@ -149,7 +149,7 @@ ul {
   text-decoration: underline;
   font-weight: 900;
   text-transform: uppercase;
-  font-size: 2.5rem;
+  font-size: 2rem;
   margin-left: 1rem;
   overflow-wrap: break-word;
   display: block;
